Fix stacking list in credits on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -740,6 +740,10 @@ nav button {
     #credits .row {
         flex-direction: column !important;
     }
+
+    .stacking-list {
+        gap: 0;
+    }
 }
 
 
